crates/cockpitctl-conform/tests/snapshots/snapshot_tests__path_traversal_violation.snap
---
source: crates/cockpitctl-conform/tests/snapshot_tests.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "path_hygiene",
            message: "finding[0]: path traversal (contains ..): ../../../etc/passwd",
        },
    ],
}
