crates/cockpitctl-conform/tests/snapshots/snapshot_tests__valid_receipt_all_pass.snap
---
source: crates/cockpitctl-conform/tests/snapshot_tests.rs
expression: result
---
ConformResult {
    violations: [],
}
